fix: scrollbar not showing for file menu

--- a/client/src/components/menu/menu/FileMenu.module.css
+++ b/client/src/components/menu/menu/FileMenu.module.css
@@ -10,6 +10,12 @@
     top: 0;
     left: 0;
     bottom: 0;
+    overflow-y: scroll;
+    direction: rtl;
+}
+
+.contents {
+    direction:ltr;
 }
 
 .header {
